--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
     mailer: 
       image: schickling/mailcatcher
       ports: [1025, 1080]
+
+    rabbitmq:
+      image: rabbitmq:3.7-management
+      ports: [5672, 15672]
